# ili9341wip

./: CMakeLists.txt  prj.conf
boards/: nrf52840dk_nrf52840.overlay
dts/bindings/display/: ilitek,ili9341-8080-8bit.yaml
src/: main.c
src/lib/: font.c  font.h  ili9341.c  ili9341.h
